--- a/deno.json
+++ b/deno.json
@@ -18,6 +18,7 @@
     "@std/fmt": "jsr:@std/fmt@^1.0.5",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "@types/json-schema": "npm:@types/json-schema@^7.0.15",
+    "conventional-changelog-conventionalcommits": "npm:conventional-changelog-conventionalcommits@^8.0.0",
     "fetch-mock-cache": "npm:fetch-mock-cache@^2.1.3",
     "jest-get-type": "npm:jest-get-type@^29.6.3",
     "json-schema": "npm:json-schema@^0.4.0",
