--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
       # https://circleci.com/developer/images/image/cimg/node
       #- image: cimg/node:12.22.1
       #- currently we need this for dynamic import in module tests, ONLY.
-      #- image: cimg/node:20.18.3
-      - image: denoland/deno:2.2.2
+      - image: cimg/node:20.18.3
+      #- image: denoland/deno:2.2.2
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -24,9 +24,10 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      - run: apt-get update
-      - run: apt install -qq -y curl gpg git ssh
-      # - run: curl -fsSL https://deno.land/install.sh | sh
+      # - run: apt-get update
+      # - run: apt install -qq -y curl gpg git ssh
+      - run: curl -fsSL https://deno.land/install.sh | sh
+      - run: echo 'export PATH="${PATH}:/home/circleci/.deno/bin"' >> $BASH_ENV
 
       - checkout
 
