--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,8 @@
   "tasks": {
     "cli": "deno run -A bin/yahoo-finance.ts",
     "install-cli": "deno install -A --global -n yahoo-finance npm:yahoo-finance/bin/yahoo-finance.ts",
-    "schema": "deno run --allow-read --allow-write --allow-env scripts/schema.ts > schema.json",
+    "schema_": "TODO below... separate watch mode, vscode scripts, mtime check, etc",
+    "schema": "deno run -A scripts/schema-gen.ts",
     "test": "deno test -A",
     "build:npm": "deno run -A scripts/build_npm.ts",
     "devTODO": "deno run --watch main.ts"
@@ -14,8 +15,10 @@
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.3",
     "@jest/types": "npm:@jest/types@^29.6.3",
+    "@std/async": "jsr:@std/async@^1.0.10",
     "@std/expect": "jsr:@std/expect@^1.0.13",
     "@std/fmt": "jsr:@std/fmt@^1.0.5",
+    "@std/fs": "jsr:@std/fs@^1.0.13",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "@types/json-schema": "npm:@types/json-schema@^7.0.15",
     "conventional-changelog-conventionalcommits": "npm:conventional-changelog-conventionalcommits@^8.0.0",
