--- a/deno.json
+++ b/deno.json
@@ -15,7 +15,8 @@
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.3",
     "@jest/types": "npm:@jest/types@^29.6.3",
-    "@std/async": "jsr:@std/async@^1.0.10",
+    "@std/async": "jsr:@std/async@^1.0.11",
+    "@std/cli": "jsr:@std/cli@^1.0.14",
     "@std/expect": "jsr:@std/expect@^1.0.13",
     "@std/fmt": "jsr:@std/fmt@^1.0.5",
     "@std/fs": "jsr:@std/fs@^1.0.13",
@@ -30,5 +31,8 @@
     "tough-cookie": "npm:tough-cookie@^5.1.1",
     "tough-cookie-file-store": "npm:tough-cookie-file-store@^2.0.3",
     "ts-json-schema-generator": "npm:ts-json-schema-generator@1.5.1"
+  },
+  "fmt": {
+    "include": ["src/**/*.ts", "bin/**/*.ts", "test/**/*.ts", "scripts/**/*.ts"]
   }
 }
