chore(deno): test in parallel by default

--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,7 @@
     "install-cli": "deno install -A --global -n yahoo-finance npm:yahoo-finance/bin/yahoo-finance.ts",
     "schema_": "TODO below... separate watch mode, vscode scripts, mtime check, etc",
     "schema": "deno run -A scripts/schema-gen.ts",
-    "test": "deno test -A",
+    "test": "deno test -A --parallel",
     "build:npm": "deno run -A scripts/build_npm.ts",
     "devTODO": "deno run --watch main.ts"
   },
